# seed-autocomplete

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  Makefile.toml
example/src/: country_search.rs  lib.rs
src/: lib.rs  view_builder.rs
