[package]
version = "0.1.0"
name = "seed-autocomplete-example"
authors = ["Mike Bush <platy@njk.onl>"]
description = "Demonstrates the use of seed-autocomplete"
readme = "../README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
# Referenced commit fixes base url and memory bugs in Seed 0.7.0
# (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
# Replace with "0.8.0" once the new Seed version is released.
seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
seed-autocomplete = { path = ".." }
celes = "1.0.5"
tst = "0.10.*"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
